# mgt_downloader

./: README.md  mgt_downloader.py  setup.cfg  setup.py
src/: constants.py  util.py
src/mgt_downloader/: mgt_downloader.py
