[metadata]
name = mgt_downloader
version = 0.1.3
description = A script to download torrents using Real Debrid
author = Cesar Garcia
author_email = celord@gmail.com
url = https://github.com/celord/mgt_downloader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    tomllib; python_version<"3.11"
    curlify
python_requires = >=3.6

[options.entry_points]
console_scripts =
    mgt_downloader = mgt_downloader:main