[metadata]
name = mgt_downloader
version = 0.1.4
description = A script to download torrents using Real Debrid
author = Cesar Garcia
author_email = celord@gmail.com
url = https://github.com/celord/mgt_downloader

[options]
package_dir =
    =src
packages = find:
install_requires =
    requests
    tomllib; python_version<"3.11"
    curlify
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mgt_downloader = mgt_downloader:main